--- a/website/src/components/pricing/Pricing.scss
+++ b/website/src/components/pricing/Pricing.scss
@@ -1,67 +1,65 @@
-.header {
-    position: fixed;
+.pricing {
     width: 100%;
-    height: 90px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    padding: 6rem 1rem;
+    background-color: #000;
+}
+
+.card-container {
+    max-width: 1140px;
+    margin: auto;
+    display: grid;
+    grid-gap: 40px;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.card-container .card {
+    border: 1px solid #eee;
+    color: #eee;
+}
+
+.card {
+    text-align: center;
     padding: 1rem;
-    z-index: 10;
-
-    &.header-bg {
-        background-color: rgba(0,0,0, .85);
-        transition: .5s;
-    }
 }
 
-.nav-menu {
-    display: flex;
-
-    li {
-        padding: 0 1rem;
-    }
-
-    a {
-        font-size: 1.2rem;
-        font-weight: 500;
-    }
-
-    .hamburger {
-        display: none;
-    }
+.card:hover {
+    background-color: #141414;
 }
 
+.card h3 {
+    font-size: 1.4rem;
+    padding: 1rem;
+}
 
-@media screen and (max-width:1240px) {
-    .hamburger {
-        display: block;
+.card .bar {
+    border-bottom: 1px solid #eee;
+    width: 10%;
+    margin: 1.5rem auto;
+    display: block;
+}
+
+.card .btc {
+    font-size: 4rem;
+    font-weight: 600;
+    padding: 1rem;
+}
+
+.pricing p {
+    color: #eee;
+    padding: 1rem 0;
+    font-size: 1.2rem;
+}
+
+.card .btn {
+    display: block;
+    width: 80%;
+    margin: 2rem auto;
+}
+
+@media screen and (max-width: 980px) {
+    .card-container {
+        max-width: 90%;
+        margin: auto;
+        grid-template-columns: 1fr;
     }
-
-    .nav-menu {
-        position: absolute;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        top: 0;
-        left: -100%;
-        text-align: center;
-        width: 100%;
-        height: 100vh;
-        transition: 0.3s;
-        z-index: -1;
-        background: rgba(0,0,0, .9);
-
-        &.active {
-            left: 0;
-        }
-
-        li {
-            padding: 1rem 0;
-        }
-
-        a {
-            font-size: 2rem;
-        }
-    }
-
 }
