--- a/website/src/components/hero/Hero.scss
+++ b/website/src/components/hero/Hero.scss
@@ -1,67 +1,40 @@
-.header {
-    position: fixed;
+.hero-img {
+    background: rgba(0,0,0,.3);
+    height: 50vh;
     width: 100%;
-    height: 90px;
+    position: relative;
+}
+
+.hero-img:before {
+    content:'';
+    background: url('../../assets/heroImg.jpg') no-repeat center center/cover;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.hero-img .heading {
+    width: 100%;
+    height: 100%;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    padding: 1rem;
-    z-index: 10;
-
-    &.header-bg {
-        background-color: rgba(0,0,0, .85);
-        transition: .5s;
-    }
 }
 
-.nav-menu {
-    display: flex;
-
-    li {
-        padding: 0 1rem;
-    }
-
-    a {
-        font-size: 1.2rem;
-        font-weight: 500;
-    }
-
-    .hamburger {
-        display: none;
-    }
+.hero-img h1 {
+    font-size: 2.4rem;
 }
 
+.hero-img p {
+    font-size: 1.4rem;
+}
 
-@media screen and (max-width:1240px) {
-    .hamburger {
-        display: block;
+@media screen and (max-width:640px) {
+    .hero-img h1 {
+        font-size: 2rem;
     }
-
-    .nav-menu {
-        position: absolute;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        top: 0;
-        left: -100%;
-        text-align: center;
-        width: 100%;
-        height: 100vh;
-        transition: 0.3s;
-        z-index: -1;
-        background: rgba(0,0,0, .9);
-
-        &.active {
-            left: 0;
-        }
-
-        li {
-            padding: 1rem 0;
-        }
-
-        a {
-            font-size: 2rem;
-        }
-    }
-
 }
