--- a/website/src/components/training/Training.scss
+++ b/website/src/components/training/Training.scss
@@ -1,67 +1,59 @@
-.header {
-    position: fixed;
+.training {
     width: 100%;
-    height: 90px;
-    display: flex;
-    justify-content: space-between;
+    margin: 3rem 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    height: 100%;
+}
+
+.training .left {
+    text-align: center;
+    margin: auto;
+    padding: 1rem 4rem;
+    max-width: 600px;
+}
+
+.training .left p {
+    margin: 1.2rem 0;
+}
+
+.training .right {
+    width: 100%;
+}
+
+.right .img-container {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    position: relative;
     align-items: center;
-    padding: 1rem;
-    z-index: 10;
-
-    &.header-bg {
-        background-color: rgba(0,0,0, .85);
-        transition: .5s;
-    }
+    text-align: center;
 }
 
-.nav-menu {
-    display: flex;
-
-    li {
-        padding: 0 1rem;
-    }
-
-    a {
-        font-size: 1.2rem;
-        font-weight: 500;
-    }
-
-    .hamburger {
-        display: none;
-    }
+.right .img {
+    max-width: 60%;
+    border: 1px solid #333;
 }
 
+.right .top {
+    grid-column: 1 / span 8;
+    grid-row: 1;
+    padding-top: 20%;
+    z-index: 6;
+}
 
-@media screen and (max-width:1240px) {
-    .hamburger {
-        display: block;
+.right .bottom {
+    grid-column: 4/ -1; 
+    grid-row: 1;
+    z-index: 5;
+}
+
+@media screen and (max-width: 1140px) {
+    .training {
+        grid-template-columns: 1fr;
     }
 
-    .nav-menu {
-        position: absolute;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        top: 0;
-        left: -100%;
-        text-align: center;
-        width: 100%;
-        height: 100vh;
-        transition: 0.3s;
-        z-index: -1;
-        background: rgba(0,0,0, .9);
-
-        &.active {
-            left: 0;
-        }
-
-        li {
-            padding: 1rem 0;
-        }
-
-        a {
-            font-size: 2rem;
-        }
+    .training .img {
+        max-width: 80%;
     }
 
 }
