--- a/master-react-example/src/App.css
+++ b/master-react-example/src/App.css
@@ -1,8 +1,7 @@
-.App-header {
-  background-color: #282c34;
-  color: white;
-
-  padding: 30px;
+body {
+    background-color: #282c34;
+    color: white;
+    padding: 30px;
 }
 
 .caja {
