--- a/master-routing/src/index.css
+++ b/master-routing/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+.activado {
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
+}
