--- a/master-react-portafolio/src/index.scss
+++ b/master-react-portafolio/src/index.scss
@@ -18,6 +18,6 @@
 
 
 
-* * {
-    outline: 1px solid rgba(238, 130, 238, 0.377);
-}
+// * * {
+//     outline: 1px solid rgba(238, 130, 238, 0.377);
+// }
